trunk/Archive2/82/254003691c60fd/output
main.cpp: In function 'int main()':
main.cpp:5:27: error: 'sum' was not declared in this scope
     printf("%d", sum(10, 5));
                           ^
